--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -1,6 +1,6 @@
 \chapter{Validierung}\label{sec:chapter7}
 
-In diesem Kapitel werden die Ergebnisse des Vergleichs der ConDec - und BPMN-Modelle aus Kapitel 5 mit Hilfe einer Studie validiert. Zunächst werden in Kapitel 6.1 die Forschungsfragen vorgestellt, welche mit dieser Studie beantwortet werden sollen. Diese stützen sich auf die Erkenntnisse aus Kapitel 5. Anschließend wird in Kapitel 6.2 das Design der Studie dargestellt und in Kapitel 6.3 werden die Durchführung und die Ergebnisse der Studie beschrieben. Das Fazit der Studie befindet sich in Kapitel 6.4. \newline
+In diesem Kapitel werden die Ergebnisse des Vergleichs der ConDec und BPMN Modelle aus Kapitel 5 mit Hilfe einer Studie validiert. Zunächst werden in Kapitel 6.1 die Forschungsfragen vorgestellt, welche mit dieser Studie beantwortet werden sollen. Diese stützen sich auf die Erkenntnisse aus Kapitel 5. Anschließend wird in Kapitel 6.2 das Design der Studie dargestellt und in Kapitel 6.3 werden die Durchführung und die Ergebnisse der Studie beschrieben. Das Fazit der Studie befindet sich in Kapitel 6.4. \newline
 
 
 \section{Forschungsfragen}
@@ -31,16 +31,16 @@ Da es im Rahmen dieser Studie nicht möglich war, Modelle von den Probanden selb
 
 \textbf{Vergleichbarkeit}: 
 
-Untersucht wird hier, ob sich bei Modellen, bei denen es zwischen BPMN und ConDec Unterschiede in der Größe gibt, auch Unterschiede im Verständnis der Modelle ergeben und wiederum sollen die Grenzen der Darstellbarkeit von ConDec (Rollen, Artefakte) in Bezug auf das Verständnis analysiert werden [A 6.2], [A 6.3].\newline
+Untersucht wird hier, ob sich bei Modellen, bei denen es zwischen BPMN und ConDec Unterschiede in der Größe gibt, auch Unterschiede im Verständnis der Modelle ergeben und wiederum sollen die Grenzen der Darstellbarkeit von ConDec (Rollen und Artefakte) in Bezug auf das Verständnis analysiert werden [A 6.2], [A 6.3].\newline
 
 \section{Design der Studie}
 
 Abbildung \ref{fig:Umfrage} kann die Struktur der Umfrage entnommen werden.
-Bei der Studie wurden zwei Fragebögen eingesetzt. Die 32 Teilnehmer der Studie wurden deswegen zufallsbedingt in zwei Gruppen (je 16 Personen) eingeteilt. Zunächst wurden den Probanden allgemeine demographische Fragen gestellt (Geschlecht, Alter, Hintergrundwissen zu imperativer und deklarativer Modellierung, Hintergrundwissen zu den Software Engineering Prozessmodellen Scrum, Open UP und V-Modell XT).\newline
+Bei der Studie wurden zwei Fragebögen eingesetzt. Die 32 Teilnehmer der Studie wurden deswegen zufallsbedingt in zwei Gruppen mit jeweils 16 Personen eingeteilt. Zunächst wurden den Probanden allgemeine demographische Fragen gestellt (Geschlecht, Alter, Hintergrundwissen zu imperativer und deklarativer Modellierung, Hintergrundwissen zu den Software Engineering Prozessmodellen Scrum, Open UP und V-Modell XT).\newline
 Anschließend wurden den Teilnehmern Verständnisfragen zu ausgewählten Modellen gestellt.
 Es wurden die vier  Modellpaare \grqq Lösungsinkrement entwickeln (Open UP) \grqq, \grqq Scrum\grqq, \grqq Systementwicklungsprojekt AG/AN\grqq \ und \grqq Phasen Open UP -Inception\grqq \ aus Kapitel 5 ausgewählt. Hierbei wurde darauf geachtet, dass es sich um zwei kleine Modelle (<= 8 Aktivitäten) und zwei große Modelle (> 8 Aktivitäten) handelt. Gruppe 1 startete mit einem deklarativen Prozess und Gruppe 2 mit dem entsprechenden imperativen Prozess. Somit wurden von jeder Gruppe zwei imperative und zwei deklarative Prozesse bearbeitet.  \newline
-Im letzten Teil des Fragebogens wurden den Probanden noch vier Modellpaare direkt gegenüber gestellt und sie wurden nach ihrem präferierten Modell (deklarativ oder imperativ) gefragt und mussten in einem Freitextfeld den Grund für ihre Entscheidung angeben. Auch hier wurden den Teilnehmern wiederum zwei kleine (<= 8 Aktivitäten) und zwei große (> 8 Aktivitäten)  Modelle gezeigt. Es wurden die Modelle \textit{System spezifizieren (V-Modell XT)}, \textit{Phasen des Open UP}, \textit{Inkrementelle Entwicklung durchführen (V-Modell XT)} und \textit{Release deployen} ausgewählt. \newline
-Die semantische Gleichheit der Modellpaare wurde wie bereits in Kapitel 5 erwähnt durch das Testen von validen Pfaden durch die jeweiligen Modelle sichergestellt.\newline
+Im letzten Teil des Fragebogens wurden den Probanden noch vier Modellpaare direkt gegenüber gestellt. Sie wurden nach ihrem präferierten Modell (deklarativ oder imperativ) gefragt und mussten in einem Freitextfeld den Grund für ihre Entscheidung angeben. Auch hier wurden den Teilnehmern wiederum zwei kleine (<= 8 Aktivitäten) und zwei große (> 8 Aktivitäten)  Modelle gezeigt. Es wurden die Modelle \textit{System spezifizieren (V-Modell XT)}, \textit{Phasen des Open UP}, \textit{Inkrementelle Entwicklung durchführen (V-Modell XT)} und \textit{Release deployen} ausgewählt. \newline
+Die semantische Gleichheit der Modellpaare wurde, wie bereits in Kapitel 5 erwähnt, durch das Testen von validen Pfaden durch die jeweiligen Modelle sichergestellt.\newline
 Die vollständigen Fragebögen können in Anhang C eingesehen werden.
 
 \begin{figure}[H]
@@ -54,7 +54,7 @@ Die vollständigen Fragebögen können in Anhang C eingesehen werden.
 \subsection{Verständnisfragen}
 
 Zu jedem Modell wurden den Teilnehmern jeweils acht Verständnisfragen gestellt. Diese zielten auf das Verständnis der möglichen Reihenfolge der Aktivitäten, mögliche Start- und Endaktivitäten, allgemeine Informationen aus dem Modell sowie parallele Abläufe von Aktivitäten, sich ausschließende Aktivitäten und die Anzahl möglicher Ausführungen von Aktivitäten.\newline
-Die Teilnehmer konnten bei der Beantwortung der Fragen zwischen vier Antwortmöglichkeiten wählen: \textit{Ja}, \textit{Nein}, \textit{Geht nicht aus Modell hervor} und \textit{Unentschlossen}.
+Die Teilnehmer konnten bei der Beantwortung der Fragen zwischen den folgenden vier Antwortmöglichkeiten wählen: \textit{Ja}, \textit{Nein}, \textit{Geht nicht aus Modell hervor} und \textit{Unentschlossen}.
 
 \subsection{Umfragewerkzeug und Durchführung}
 
@@ -62,7 +62,7 @@ Zur Durchführung wurde das Fragebogenwerkzeug \textit{Limesurvey} verwendet. De
 
 \subsection{Auswertung}
 
-Für jede richtige Antwort wurde ein Punkt vergeben. Für jede falsche Antwort gab es null Punkte. Auch \textit{Unentschlossen} wurde als falsche Antwort gewertet. Die einzelnen Punkte wurden dann pro Frage aufsummiert, so dass ein maximaler Wert pro Frage von 1 möglich war.
+Für jede richtige Antwort wurde 1 Punkt vergeben. Für jede falsche Antwort gab es 0 Punkte. Auch \textit{Unentschlossen} wurde als falsche Antwort gewertet. Die einzelnen Punkte wurden dann pro Frage aufsummiert, so dass ein maximaler Wert pro Frage von 1 möglich war.
 
 \section{Durchführung der Studie}
 
@@ -70,7 +70,7 @@ Im Folgenden wird die Durchführung der Studie genau beschrieben.
 
 \subsection{Teilnehmer}
 
-Es wurden 32 Studenten und Doktoranden aus dem Bereich Informatik/Medieninformatik befragt. 12 Teilnehmer waren weiblich und 20 männlich. Die allgemeinen demographischen Daten der Probanden können Abbildung \ref{fig:TabelleAllgemeineDaten} entnommen werden. Diese hatten unterschiedliches Hintergrundwissen zum Thema Prozessmodellierung. Wie Abbildung in \ref{fig:VerteilungImperativDeklarative} zu ersehen ist, hatten sieben Studienteilnehmer weder in imperativer noch in deklarativer Modellierung Erfahrung (Teilnehmer, welche angaben seit 0-1 Jahr imperative oder deklarative Prozessmodelle zu modellieren und im letzten Jahr keine imperativen oder deklarativen Prozessmodelle erstellt zu haben). 15 Probanden hatten nur in imperativer Modellierung Erfahrung, jedoch nicht in deklarativer Modellierung (Teilnehmer, die angaben seit mehr als 1 Jahr imperative Prozessmodelle zu erstellen und seit 0-1 Jahr deklarative Prozessmodelle zu erstellen und im letzten Jahr keine deklarativen Prozessmodelle erstellt haben). 10 weitere Teilnehmer hatten in beiden Modellierungssprachen Erfahrung. Die Versuchsobjekte wurden bewusst nach unterschiedlichem Hintergrundwissen zum Thema Prozessmodellierung ausgewählt um zu prüfen, in wie fern sich die Ergebnisse bei den Verständnisfragen zwischen Personen mit viel und wenig Hintergrundwissen zum Thema Prozessmodellierung unterscheiden.\newline
+Es wurden 32 Studenten und Doktoranden aus dem Bereich Informatik/Medieninformatik befragt. 12 Teilnehmer waren weiblich und 20 männlich. Die allgemeinen demographischen Daten der Probanden können Abbildung \ref{fig:TabelleAllgemeineDaten} entnommen werden. Diese hatten unterschiedliches Hintergrundwissen zum Thema Prozessmodellierung. Wie Abbildung in \ref{fig:VerteilungImperativDeklarative} zu sehen ist, hatten sieben Studienteilnehmer weder in imperativer noch in deklarativer Modellierung Erfahrung (Teilnehmer, welche angaben seit 0-1 Jahr imperative oder deklarative Prozessmodelle zu modellieren und im letzten Jahr keine imperativen oder deklarativen Prozessmodelle erstellt zu haben). 15 Probanden hatten nur in imperativer Modellierung Erfahrung, jedoch nicht in deklarativer Modellierung (Teilnehmer, die angaben seit mehr als 1 Jahr imperative Prozessmodelle zu erstellen und seit 0-1 Jahr deklarative Prozessmodelle zu erstellen und im letzten Jahr keine deklarativen Prozessmodelle erstellt haben). 10 weitere Teilnehmer hatten in beiden Modellierungssprachen Erfahrung. Die Versuchsobjekte wurden bewusst nach unterschiedlichem Hintergrundwissen zum Thema Prozessmodellierung ausgewählt um zu prüfen, in wie fern sich die Ergebnisse bei den Verständnisfragen zwischen Personen mit viel und wenig Hintergrundwissen zum Thema Prozessmodellierung unterscheiden.\newline
 
 
 \begin{figure}[htp]
@@ -107,9 +107,9 @@ Der gesamte Mittelwert aller acht Fragen beträgt bei der imperativen Gruppe 0,9
 
 
 Die Ergebnisse der Verständnisfrage 2 zum Modell \textit{Scrum} von allen Teilnehmern kann Abbildung \ref{fig:Frage2} entnommen werden.  Bei Scrum handelte es sich um ein großes Modell (>8 Aktivitäten), welches sowohl viele Verzweigungen als auch viele parallele Aktivitäten aufweist. Auch hier weichen die Ergebnisse der imperativen und deklarativen Modelle voneinander ab.\newline
-Nur bei der ersten Frage (\grqq Ein Scrum Meeting dauert 15 Minuten\grqq) schnitt der deklarative Prozess besser ab als der imperative. Diese allgemeine Information aus dem Prozess befand sich bei beiden Prozessen in der Beschriftung der Aufgabe \grqq 15-minütiges Scrum Meeting durchführen\grqq. Der imperative Scrum-Prozess weist insgesamt mehr Elemente auf als der deklarative. Daher fiel es wohl den Probanden leichter, die Übersicht über allgemeine Informationen zu behalten.\newline
+Nur bei der ersten Frage (\grqq Ein Scrum Meeting dauert 15 Minuten\grqq) schnitt der deklarative Prozess besser ab als der imperative Prozess. Diese allgemeine Information aus dem Prozess befand sich bei beiden Prozessen in der Beschriftung der Aufgabe \grqq 15-minütiges Scrum Meeting durchführen\grqq. Der imperative Scrum-Prozess weist insgesamt mehr Elemente auf als der deklarative Scrum-Prozess. Daher fiel es wohl den Probanden leichter, die Übersicht über allgemeine Informationen zu behalten.\newline
 Bei den Fragen 2 und 8 hat das deklarative Modell eine sehr schlechte Punktzahl erreicht. Bei Frage 2 (\grqq Die Aktivität \grqq Task abarbeiten\grqq \ kann beliebig ausgeführt werden\grqq) konnten die Teilnehmer der XOR-Verknüpfung im imperativen Modell, welche eine Rückschleife auf die Aktivität \grqq Task abarbeiten\grqq, besser folgen als der entsprechenden Darstellung der Aktivität im deklarativen Modell. \newline
-Das gleiche gilt für Frage 8 (\grqq Nach Beendigung der Aufgabe \grqq Task abarbeiten\grqq \ endet der Prozess sofort\grqq). Auch hier wurde die Verzweigung und das damit mögliche Zurückkehren zur Aufgabe \grqq Sprint-Planning-Meeting durchführen\grqq \ durch eine XOR-Verknüpfung im imperativen Modell dargestellt und war somit für die Teilnehmer klarer verständlich.\newline
+Das Gleiche gilt für Frage 8 (\grqq Nach Beendigung der Aufgabe \grqq Task abarbeiten\grqq \ endet der Prozess sofort\grqq). Auch hier wurde die Verzweigung und das damit mögliche Zurückkehren zur Aufgabe \grqq Sprint-Planning-Meeting durchführen\grqq \ durch eine XOR-Verknüpfung im imperativen Modell dargestellt und war somit für die Teilnehmer klarer verständlich.\newline
 Der Mittelwert aller acht Fragen insgesamt ist bei der imperativen Gruppe 0,89 und bei der deklarativen Gruppe 0,70. Die Fragen wurden also von der imperativen Gruppe richtiger beantwortet als von der deklarativen Gruppe.\newline
 
 
@@ -121,7 +121,7 @@ Der Mittelwert aller acht Fragen insgesamt ist bei der imperativen Gruppe 0,89 u
 \end{center}
 \end{figure}
 
-Beim Modell \grqq V-Modell: Systementwicklungsprojekt AG/AN\grqq \ der Verständnisfrage 3 lagen die Ergebnisse des deklarativen Modell bis auf Frage 3 immer unter denen des imperativen Modells (Abbildung \ref{fig:Frage3}). Starke Abweichung gab es bei den Fragen 2, 4, 5, 6, 7. \newline
+Beim Modell \grqq V-Modell: Systementwicklungsprojekt AG/AN\grqq \ der Verständnisfrage 3 lagen die Ergebnisse des deklarativen Modell bis auf Frage 3 immer unter denen des imperativen Modells (Abbildung \ref{fig:Frage3}). Starke Abweichung gab es bei den Fragen 2, 4, 5, 6 und 7. \newline
 Bei Frage 2 (\grqq Die Aktivitäten \grqq Prototypische Entwicklung durchführen\grqq, \grqq Komponentenbasierte Entwicklung durchführen\grqq \ und \grqq Inkrementelle Entwicklung durchführen\grqq \ können parallel zueinander ausgeführt werden\grqq) war den Teilnehmern, welche das deklarative Modell bearbeiten mussten, die Notation des Constraints \textit {Exclusive Choice 1 of 3} nicht ganz klar. Sechs der 16 Probanden kreuzten hier entweder \textit{Ja} oder \textit{Unentschlossen} an. Es musste im deklarativen Modell ein zusätzlicher Unterprozess eingefügt werden da das Verhalten des Prozesses nicht anders darzustellen war. Eventuell waren die Probanden auch von dem zusätzlichen Unterprozess irritiert.\newline
 Frage 4 (\grqq Nach Ausführung der Aktivität \grqq System abnehmen\grqq \ kann die Aktivität \grqq Anforderungen festlegen\grqq \ ausgeführt werden\grqq \ und Frage 5 (\grqq Nach Ausführung der Aktivität \grqq System abnehmen\grqq \ kann die Aktivität \grqq Projekt ausschreiben\grqq \ ausgeführt werden\grqq) zielten wieder auf Verzweigungen des Prozesses ab. Der imperative Prozess war den Teilnehmern verständlicher. \newline
 Frage 6 (\grqq Die Aktivität "Iteration planen" kann innerhalb einer Prozessinstanz genau einmal ausgeführt werden\grqq) wurde von der deklarativen Gruppe weniger richtig beantwortet als von der deklarativen. Es war der deklarativen Gruppe vermutlich die Möglichkeit zur Rückkehr an eine frühere Aktivität im Prozess nicht ganz klar. \newline
@@ -202,7 +202,7 @@ Die 30 Personen, welchen das imperative Modell besser gefiel, gaben an, dass sie
 \end{figure}
 
 Beim Modell \grqq Open UP: Release deployen\grqq \ präferierten neun Personen das deklarative Modell und 23 Teilnehmer das imperative Modell (Abbildung \ref{fig:Meinungsfrage4}). Von den neun Teilnehmern, welche das deklarative Modell bevorzugten hatte nur einer Kenntnisse in deklarativer Modellierung, einer hatte weder in deklarativer noch in imperativer Modellierung Erfahrung und sieben verfügten nur über Wissen in imperativer Modellierung. \newline
-Als Begründung für die Wahl des deklarativen Modelles wurde die Übersichtlichkeit desselbigen genannt und zwar auf Grund der fehlenden Artefakte im Modell. Es wurde bemängelt, die vielen Artefakte würden das imperative Modell unübersichtlich machen.\newline
+Als Begründung für die Wahl des deklarativen Modelles wurde die Übersichtlichkeit desselbigen genannt und zwar auf Grund der fehlenden Artefakte im Modell. Es wurde bemängelt, dass die vielen Artefakte das imperative Modell unübersichtlich machen würden.\newline
 Die Probanden, die das imperative Modell besser fanden, gaben als Gründe den klaren Anfang und das klare Ende des Prozesses an, die bessere Verständlichkeit der Optionalität der Aktivität \textit{Backoutplan ausführen} und die fehlenden Artefakte im deklarativen Modell. \newline
 
 
@@ -241,9 +241,9 @@ Während ein großer Teil der Probanden bei den Modellen \grqq System spezifizie
 
 Nachfolgend werden die beiden Grundsätze \textit{Klarheit} und \textit{Wirtschaftlichkeit} zusammengefasst, da sie hier die gleichen Kriterien haben und die \textit{Wirtschaftlichkeit} im Rahmen dieser Studie nicht getestet werden kann.\newline
 
-Bei Modellen mit  vielen Verzweigungen/Schleifen war für die Teilnehmer BPMN verständlicher. Dies zeigte sich beim kleinen (<= 8 Aktivitäten) Prozess \grqq Open UP:Lösungsinkrement entwickeln\grqq, bei dem die Punktzahlen bei der BPMN Gruppe leicht höher waren und noch deutlicher als beim großen Modell (> 8 Aktivitäten) \grqq V-Modell: Systementwicklungsprojekt AG/AN\grqq. Bei diesen beiden Prozessen sind in ConDec deutlich mehr Constraints notwendig als Gateways in BPMN, vor allem werden viele verschiedene Constraints zur korrekten Darstellung des Ablaufs benötigt. Dadurch haben die ConDec-Modelle eine deutlich höhere Komplexität als die BPMN-Modelle [A 4.1], [A 4.3].\newline
+Bei Modellen mit vielen Verzweigungen bzw. Schleifen war für die Teilnehmer BPMN verständlicher. Dies zeigte sich beim kleinen (<= 8 Aktivitäten) Prozess \grqq Open UP:Lösungsinkrement entwickeln\grqq, bei dem die Punktzahlen bei der BPMN Gruppe leicht höher waren und noch deutlicher als beim großen Modell (> 8 Aktivitäten) \grqq V-Modell: Systementwicklungsprojekt AG/AN\grqq. Bei diesen beiden Prozessen sind in ConDec deutlich mehr Constraints notwendig als Gateways in BPMN, vor allem werden viele verschiedene Constraints zur korrekten Darstellung des Ablaufs benötigt. Dadurch haben die ConDec-Modelle eine deutlich höhere Komplexität als die BPMN-Modelle [A 4.1], [A 4.3].\newline
 
-Es fällt besonders auf, dass Fragen bezüglich der Reihenfolge der Aktivitäten bei ConDec bei direkt aufeinander folgenden Aktivitäten größtenteils richtig beantwortet wurden. Jedoch bei Abläufen, bei denen es durch Verzweigungen im Prozessablauf zu einem Rücksprung kommt, wurden nur die Fragen zu den BPMN-Modellen größtenteils richtig und bei ConDec wurden diese Fragen häufig falsch beantwortet [A 4.1], [A 4.3].\newline
+Es fällt besonders auf, dass Fragen bezüglich der Reihenfolge der Aktivitäten bei ConDec bei direkt aufeinander folgenden Aktivitäten größtenteils richtig beantwortet wurden. Jedoch bei Abläufen, bei denen es durch Verzweigungen im Prozessablauf zu einem Rücksprung kommt, wurden nur die Fragen zu den BPMN-Modellen größtenteils richtig beantwortet. Bei ConDec wurden diese Fragen häufig falsch beantwortet [A 4.1], [A 4.3].\newline
 
 Das gleiche gilt für den großen Prozess (> 8 Aktivitäten) \grqq Scrum\grqq. Die beiden Fragen, welche von der deklarativen Gruppe sehr fehlerhaft verstanden wurden, hatten beide mit Verzweigungen innerhalb des Prozesses zu tun und wurden von der imperativen Gruppe durch die dortige Darstellung mit Hilfe eines XOR-Gateways wesentlich besser verstanden. Jedoch konnte die allgemeine Frage zum Prozess wie lange ein Scrum-Meeting dauert, von der deklarativen Gruppe besser beantwortet werden. Da der deklarative Prozess über weniger Elemente verfügt als der imperative und somit kompakter ist, können allgemeine Informationen leichter gefunden werden [A 4.1], [A 4.3]. \newline
 Beim letzten Prozess \grqq Inception\grqq \ haben sich die Erkenntnisse aus Kapitel 5 nicht ganz bestätigt. Auf Grund der vielen parallelen Aktivitäten in diesem Prozess ist der deklarative Prozess hier der weniger komplexe und übersichtlichere. Jedoch wurden die Modelle von der imperativen Gruppe dennoch häufiger besser verstanden. Zwar ist der Unterschied nicht sehr groß, dennoch war hier das Ergebnis genau gegensätzlich erwartet [A 4.1], [A 4.3].\newline
