--- a/Masterarbeit 4/Tex/chapter8.tex
+++ b/Masterarbeit 4/Tex/chapter8.tex
@@ -13,7 +13,7 @@ Zudem erfolgte die Anforderungserhebung für den Vergleich von imperativen und d
 
 Danach konnte die Modellierung der imperativen und deklarativen Modelle der drei Softwareentwicklungsprozesse Scrum, Open UP und V-Modell XT erfolgen. Nach einer kurzen Einführung und Analyse der Modelle wurde die imperative und deklarative Modellierung der selbigen dargelegt. Anschließend erfolgte jeweils der Vergleich der Modellierungen durch die definierten Kriterien. Abschließend wurde ein Vergleich zwischen allen modellierten Prozessmodellen anhand der Anforderungskriterien durchgeführt. \newline
 
-Die Ergebnisse zeigen, dass der imperative Prozessmodellierungsansatz BPMN bei vielen Punkten einen geeigneteren Ansatz darstellt als ConDec. Dies hat der direkte Vergleich der verschiedenen Modelle ergeben. Im Gegensatz zu BPMN gibt es bei ConDec momentan noch einige Grenzen in der Darstellbarkeit. Dies bezieht sich vor allem auf Rollen und Artefakte. Diese können zwar im Modellierungstool Declare angelegt und zugewiesen werden, jedoch sind diese im Prozessmodell selbst nicht visualisierbar. Zwar entstehen bei der Modellierung mit BPMN oftmals Modelle mit deutlich mehr Elementen insgesamt als bei der Modellierung mit ConDec, jedoch sind im Gegensatz dazu die mit ConDec erstellten Modelle oftmals deutlich komplexer als die BPMN Modelle. Dies wirkt sich sowohl negativ auf das Verständnis der Leser des Modelles aus als auch auf den Aufwand des Modellierers beim Erstellen der Modelle mit ConDec. Je mehr geistiger Aufwand beim Lesen und modellieren für Prozessmodelle notwendig ist desto mehr Fehler entstehen auch beim Interpretieren und Modellieren der Modelle. \newline
+Die Ergebnisse zeigen, dass der imperative Prozessmodellierungsansatz BPMN bei vielen Punkten einen geeigneteren Ansatz darstellt als ConDec. Dies hat der direkte Vergleich der verschiedenen Modelle ergeben. Im Gegensatz zu BPMN gibt es bei ConDec momentan noch einige Grenzen in der Darstellbarkeit. Dies bezieht sich vor allem auf Rollen und Artefakte. Diese können zwar im Modellierungstool Declare angelegt und zugewiesen werden, jedoch sind diese im Prozessmodell selbst nicht visualisierbar. Zwar entstehen bei der Modellierung mit BPMN oftmals Modelle mit deutlich mehr Elementen insgesamt als bei der Modellierung mit ConDec. Jedoch sind im Gegensatz dazu die mit ConDec erstellten Modelle oftmals deutlich komplexer als die BPMN Modelle. Dies wirkt sich sowohl negativ auf das Verständnis der Leser des Modelles aus als auch auf den Aufwand des Modellierers beim Erstellen der Modelle mit ConDec. Je mehr geistiger Aufwand beim Lesen und modellieren für Prozessmodelle notwendig ist desto mehr Fehler entstehen auch beim Interpretieren und Modellieren der Modelle. \newline
 
 Die herausgearbeiteten Ergebnisse des Vergleiches wurden mit Hilfe einer Studie validiert. Zunächst wurden der Aufbau und der Ablauf der Studie genau erläutert. Weiterhin wurden die Ergebnisse der Studie präsentiert und ein Fazit gezogen. Hier wurden die Ergebnisse aus Kapitel 6 nochmals weitgehend bestätigt. Somit ist BPMN im Moment die geeignetere Modellierungssprache. Bei ConDec müsste noch nachgebessert werden um die Eignung zur Modellierung noch zu steigern.\newline
 
