--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -729,3 +729,12 @@ url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie\ -als-stra
        publisher = {Springer, LNBIP, vol. 147},
            pages = {2--17, 2013}
            }
+           
+           @proceedings{opac,
+   title = "Software process dynamics and agility : International Conference on Software Process",
+   editor = "Wang, Qing and Pfahl, Dietmar and Raffo, David Mitchell",
+   series = "Lecture notes in computer science",
+   publisher = "Springer",
+   year = 2007
+}
+
